@@ -1,1 +1,2 @@
-OBK      HE plots for repeated measures designs, OBrienKaiser data
+bees.contrasts     Bees data: contrasts to resolve trtime into treat, time, treat:time
+OBK                HE plots for repeated measures designs, OBrienKaiser data
