@@ -48,6 +48,8 @@ Version 0.8-6 (2009-04-11)
  
  Version 0.8-7 (2009-04-17)
  o Initial version of heplot1d
+ o Added data(Bees), demo(bees.contrasts)
+ o Now suggest: effects package
  
  
  
